--- a/config/config.toml
+++ b/config/config.toml
@@ -1,6 +1,8 @@
 [General]
   DefaultTraffic = 100
+  Offset = 0
   NetworkCardName = "eth0"
   StartTraffic = 0
   ExpireTime = "2024-05-12 13:50:52.4085838 +0800 CST"
   ClashPath = "./clash_config.yml"
+  ResetMonthly = false
